--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,6 +14,8 @@ Features
 Bugfixes
 --------
 
+* Fix ``nikola check -l`` for absolute and full-path URL styles
+  (Issue #1650)
 * Really add missing trailing slashes in ``BASE_URL`` (Issue #1651)
 * Check if files exists before adding them as post-list dependencies
   (Issue #1646)
